# Hands-On-Microservices-with-Rust

Chapter02/hyper-microservice/: Cargo.toml
Chapter02/hyper-microservice-rest/: Cargo.toml
Chapter02/hyper-microservice-with-handlers/: Cargo.toml  README.md
Chapter02/hyper-microservice-with-handlers/api/: index.rs
Chapter02/hyper-microservice-with-handlers/src/: main.rs
Chapter02/hyper-microservice/src/: main.rs
